# CodonU

./: .gitbook.yaml  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE.md  README.md  README_pypi.md  Staphylococcus_species.csv  info.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sphinx.yml
CodonU/: __init__.py  final_project.ipynb  main.py
CodonU/analyzer/: README.md  __init__.py  aromaticity_comp.py  cai_comp.py  cbi_comp.py  enc_comp.py  generate_report.py  generate_report_summary.py  gravy_comp.py  internal_comp.py  rscu_comp.py  tRNA_comp.py
CodonU/correspondence_analysis/: MCA.py  __init__.py  build_contingency_table_aa_count.py  build_contingency_table_codon_count.py  build_contingency_table_codon_rscu.py  ca_aa.py  ca_codon.py  mca_aa_freq.py  mca_codon_freq.py  mca_codon_rscu.py  plot_mca_aa_aroma.py  plot_mca_aa_freq.py  plot_mca_codon_freq.py  plot_mca_rscu.py
CodonU/cua_errors/: README.md  __init__.py  bad_seq_err.py  codon_table_exist_err.py  codon_usage_err.py  (+5 more)
Examples/: 1_file_handle.ipynb  1_file_handle_extraction.ipynb  2_analyzing.ipynb  3_Correspondence_analysis.ipynb  4_phylo.ipynb  5_Vizualization.ipynb  Staphylococcus_species.csv  best_fit.py  getting_started.ipynb  tRNA.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
meta/: sequence_1.gb  staphylococcus_metadata.tsv
srcs/: Analyzer.py  CdsExtractor.py  Codon Usage.ipynb  Errors.py  Extractor.py  FileHandler.py  Vizualizer.py  main.py  scores.py  sequence.py
(+325 files in other folders)
